--- a/cp/notes.tex
+++ b/cp/notes.tex
@@ -200,7 +200,8 @@ public:
     }
 }
 \end{lstlisting}
-
+\subsubsection{Procedural PQ functions}
+TODO: \texttt{make\_heap} and the lot.
 \subsection{The Big Fat Table of Data Structures}
 \input{parts/bigfattable}
 \subsection{Comparators}
