--- a/cp/notes.tex
+++ b/cp/notes.tex
@@ -201,7 +201,14 @@ public:
 }
 \end{lstlisting}
 \subsubsection{Procedural PQ functions}
-TODO: \texttt{make\_heap} and the lot.
+\begin{itemize}
+\item A given vector \texttt{a} can be used as a heap in-place without transferring its contents anywhere using the functions below:
+\begin{enumerate}
+\item \texttt{make\_heap}:
+\item \texttt{push\_heap}:
+\item \texttt{pop\_heap}:
+\end{enumerate}
+\end{itemize}
 \subsection{The Big Fat Table of Data Structures}
 \input{parts/bigfattable}
 \subsection{Comparators}
