--- a/cp/notes.tex
+++ b/cp/notes.tex
@@ -209,6 +209,18 @@ public:
 \item \texttt{pop\_heap}:removes the maximum element in the heap formed by (first,last).
 \end{enumerate}
 \end{itemize}
+\subsection{Deque}
+This is the most generic form of a container, combining methods for a stack, a queue and a vector (O(1) index accesses) allowing for:
+\begin{enumerate}
+\item \texttt{push\_front(val)}
+\item \texttt{pop\_front()}
+\item \texttt{push\_back(val)}
+\item \texttt{pop\_back()}
+\item \texttt{front()}
+\item \texttt{back()}
+\item \texttt{d[i]}
+\item \texttt{insert(iter,val)}
+\end{enumerate}
 \subsection{The Big Fat Table of Data Structures}
 \input{parts/bigfattable}
 \subsection{Comparators}
