--- a/cp/notes.tex
+++ b/cp/notes.tex
@@ -582,8 +582,8 @@ class SegmentTree{
         r+=n;
         // if inclusive r, r+=1;
         for (; l < r; l >>= 1, r >>= 1) {
-            if (l&1) res += segs[l++];
-            if (r&1) res += segs[--r];
+            if (l&1){ res += segs[l++];}
+            if (r&1){ res += segs[--r];}
         }
         return res;
     }
@@ -601,16 +601,24 @@ The name is given to the family of algorithms where we do a couple of runs of a 
     \item To improve performance, try to reduce the variables being updated/used in the loop.
     \item Two loops are useful for getting started with the code, but reducing them to one helps performance.
 \end{itemize}
-\subsection{Min/Max in Arrays}
-Some questions might require evaluating the min/max elements in subarrays. These can be pre-computed using
-\textbf{prefix} and \textbf{suffix} arrays. In a prefix array, \texttt{a[i]} denotes the min/max value
+\subsection{Subarray Evaluations in Arrays}
+\begin{itemize}
+\item Some questions might require evaluating the min/max elements in subarrays. These can be pre-computed using
+\textbf{prefix} and \textbf{suffix} arrays, or a \textbf{segment tree}.
+\item  In a prefix array, \texttt{a[i]} denotes the min/max value
 of the set \{\texttt{a[0],a[1]...a[i]}\} and in a suffix array, it denotes the min/max value
-of the set \{\texttt{a[i],a[i+1],...a[n-1]}\}. Additionally, \textbf{prefix and suffix sum} arrays
-can be used to pre-compute cumulative sums for sub-arrays. If a question involves finding
-the max element less than or min element more than a value over a range, consider using 
-\textbf{binary search} and maintaining a sorted version of the range.
+of the set \{\texttt{a[i],a[i+1],...a[n-1]}\}.
+\item Additionally, \textbf{prefix and suffix sum} arrays
+can be used to pre-compute cumulative sums for sub-arrays.
+\item If a question involves finding
+the max element less than or min element more than a value over a range (iter1, iter2), consider maintaining 
+a sorted collection of the range, so as to use \texttt{lower\_bound} and \texttt{upper\_bound}, or custom \textbf{binary search functions}.
+\item Suppose f is a cumulative operation defined over subarrays (say, bitwise-or, sum, or bitwise-xor), the computation can be inversed (subraction for addition, xor for xor) over the ranges, then \textbf{prefix/suffix arrays} can be used to compute
+range queries (O(1)) instead of segment trees (O(logn)).
+\item This works for xor and sum, but not for bitwise-or as it is not an invertible accumulation. 
+\end{itemize}
 \subsubsection{Two constraints}
-Some problems reduce to finding for each element \texttt{e} in \texttt{arr2}, an 
+Some problems, \href{https://leetcode.com/problems/closest-room/}{like this problem,} reduce to finding for each element \texttt{e} in \texttt{arr2}, an 
 element in \texttt{arr1} whose \texttt{attr1} is greater than a value \texttt{f(e)} 
 and \texttt{attr2} is minimized. These problems can be solved in min(n1log(n1),n2log(n2)) as follows:
 \begin{lstlisting}[caption=Two constraints, language=C++]
