--- a/ppg/ppg.tex
+++ b/ppg/ppg.tex
@@ -41,6 +41,7 @@
 \tableofcontents
 \pagebreak
 \chapter{Misc.}
+TODO: pragma O3 stuff
 \section{Misc. Confirmed Optimizations}
 \begin{enumerate}
     \item While using \texttt{cout}, \texttt{cerr} is fine during debugging, remember to remove them before submission as they greatly affect runtime.
